deploy/k8s/ircfiber/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ircfiber
  labels:
    kubernetes.io/metadata.name: ircfiber
    app.kubernetes.io/part-of: ircfiber
    project: ircfiber
